made changes, not working properly though
