# UPLOAD/main.py
@@ -1,12 +1,10 @@
-import json
-import os
-import quart
-import quart_cors
-from quart import request
+import json, os , quart, quart_cors
 
 app = quart_cors.cors(quart.Quart(__name__), allow_origin="https://chat.openai.com")
 
-# Keep track of files. Does not persist if Python session is restarted.
+import sbucket
+sbucket.init()
+
 _FILES = []
 
 @app.post("/files")
@@ -52,10 +50,11 @@ async def download_files():
         files = [file for file in _FILES if file["filename"] == filename]
     else:
         files = _FILES
-    for file in files:
-        with open(os.path.join(DOWNLOAD_FOLDER, file["filename"]), 'w') as file:
-            file.write(file["content"])
+    for file_data in files:
+        with open(os.path.join(DOWNLOAD_FOLDER, file_data["filename"]), 'w') as file:
+            file.write(file_data["content"])
     return quart.Response(response='OK', status=200)
+
 
 @app.get("/logo2.png")
 async def plugin_logo():
